# buf-rs

./: .gitignore  .rumdl.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/ci-scripts/: buf-upstream-latest-stable.sh  buf-validate-buf-release-version.sh  bufsemver_upstream_is_newer.py  find-built-buf.sh  read-workspace-version.sh  run-examples.sh  run-integration-docker.sh  rust-docker-tag-from-toolchain.sh
.github/ci/integration/: Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/workflows/: buf-upstream-watch.yml  ci.yml  publish-crates.yml  rumdl.yml  rust-tests.yml
buf-sys/: Cargo.toml  README.md  build.rs
buf-sys/build_support/: fetch.rs  mod.rs  targets.rs  verify.rs
buf-sys/src/: lib.rs
buf-toolchain/: Cargo.toml  README.md  build.rs  build_support
buf-toolchain/src/: lib.rs  main.rs  upstream.rs
buf-toolchain/tests/: managed_bin_layout.rs
buf-tools/: Cargo.toml  README.md  build.rs
buf-tools/build_support/: config.rs  fetch.rs  layout.rs  lock.rs  mod.rs  source.rs  targets.rs  verify.rs
buf-tools/build_support/test_fixtures/: v1_0_0_sha256.txt  v1_0_0_sha256.txt.minisig  v1_69_0_sha256.txt  v1_69_0_sha256.txt.minisig
buf-tools/src/: lib.rs
buf-tools/tests/: cargo_install_layout.rs
buf-tools/tests/fixtures/install-consumer/: Cargo.toml  build.rs
buf-tools/tests/fixtures/install-consumer/src/: main.rs
examples/: Cargo.toml  README.md  buf_lint.rs  protoc_with_buf_plugins.rs
examples/proto/acme/weather/v1/: weather.proto
xtask/: Cargo.toml
xtask/src/: main.rs  publish_inputs.rs
