[workspace]
resolver = "2"
members = [
    "examples",
    "buf-sys",
    "buf-toolchain",
]

[workspace.package]
version = "1.69.0"
edition = "2024"
license = "MIT"
authors = ["canardleteer <eris.has.a.dad+github@gmail.com>"]
repository = "https://github.com/canardleteer/buf-sys"
homepage = "https://github.com/canardleteer/buf-sys"
readme = "README.md"
keywords = ["buf", "protoc", "protobuf", "vendored", "cli"]
categories = ["development-tools", "api-bindings"]
publish = true

[workspace.dependencies]
buf-sys = { path = "buf-sys", version = "=1.69.0" }
buf-toolchain = { path = "buf-toolchain", version = "=1.69.0" }
