[workspace]
resolver = "2"
members = [
    "examples",
    "buf-tools",
    "buf-toolchain",
    "xtask",
]

[workspace.package]
version = "1.40.0"
edition = "2024"
license = "MIT"
authors = ["canardleteer <eris.has.a.dad+github@gmail.com>"]
repository = "https://github.com/canardleteer/buf-rs"
homepage = "https://github.com/canardleteer/buf-rs"
readme = "README.md"
keywords = ["buf", "protoc", "protobuf", "vendored", "cli"]
categories = ["development-tools", "api-bindings"]
publish = true

[workspace.dependencies]
buf-tools = { path = "buf-tools", version = "=1.40.0" }
buf-toolchain = { path = "buf-toolchain", version = "=1.40.0" }
