[package]
name = "buf-sys"
description = "Official Buf CLI binaries from bufbuild/buf releases — fetched and verified at build time (see README)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

# Rust/TOML + build_support only — binaries download in build.rs (crates.io size cap).
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
    "build.rs",
    "build_support/**/*.rs",
]

[lib]
doctest = true
bench = false

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]

[build-dependencies]
dirs = "6"
flate2 = "1"
hex = "0.4"
minisign-verify = "0.2.5"
semver = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "2.12"
