[package]
name = "buf-toolchain"
description = "Installer for official Buf CLI binaries pinned by crate semver."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish.workspace = true

include = [
    "Cargo.toml",
    "README.md",
    "src/**/*.rs",
    "build.rs",
    "build_support/**/*.rs",
]

[[bin]]
name = "validate-cargo-buf-toolchain"
path = "src/main.rs"

[dependencies]
dirs = "6"
hex = "0.4"
minisign-verify = "0.2.5"
regex = "1"
semver = "1"
serde_json = "1"
sha2 = "0.11"
ureq = "3"

[dev-dependencies]
hex = "0.4"
semver = "1"
sha2 = "0.11"
toml = { version = "1", default-features = false, features = ["parse", "serde"] }

[build-dependencies]
dirs = "6"
flate2 = "1"
hex = "0.4"
minisign-verify = "0.2.5"
semver = "1"
sha2 = "0.11"
tar = "0.4"
toml = { version = "1", default-features = false, features = ["parse", "serde"] }
ureq = "3"
