[package]
name = "buf-tools-examples"
description = "Runnable examples for buf-tools (workspace-local)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
buf-tools = { workspace = true }
protoc-bin-vendored = "3"

[[example]]
name = "buf_lint"
path = "buf_lint.rs"

[[example]]
name = "protoc_with_buf_plugins"
path = "protoc_with_buf_plugins.rs"
