[package]
name = "xtask"
description = "Workspace maintenance tasks (publish helpers, set Buf pin, etc.)."
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false }
fastrand = "2"
log = "0.4"
semver = "1"
toml_edit = "0.22"

[dev-dependencies]
temp-env = "0.3"
